sbagenxlib.h

/* Status codes returned by sbagenxlib APIs. */
enum {
  SBX_OK = 0,
  SBX_EINVAL = 1,
  SBX_ENOMEM = 2,
  SBX_ENOTREADY = 3
};
typedef enum {
  SBX_TONE_NONE = 0,
  SBX_TONE_BINAURAL = 1,
  SBX_TONE_MONAURAL = 2,
  SBX_TONE_ISOCHRONIC = 3,
  SBX_TONE_WHITE_NOISE = 4,
  SBX_TONE_PINK_NOISE = 5,
  SBX_TONE_BROWN_NOISE = 6,
  SBX_TONE_SPIN_PINK = 7,
  SBX_TONE_SPIN_BROWN = 8,
  SBX_TONE_SPIN_WHITE = 9,
  SBX_TONE_BELL = 10,
  SBX_TONE_NOISE_PULSE = 11,
  SBX_TONE_NOISE_BEAT = 12,
  SBX_TONE_ORBIT_BEAT = 13
} SbxToneMode;
typedef enum {
  SBX_WAVE_SINE = 0,
  SBX_WAVE_SQUARE = 1,
  SBX_WAVE_TRIANGLE = 2,
  SBX_WAVE_SAWTOOTH = 3,
  SBX_WAVE_CUSTOM_BASE = 1000, /* deprecated legacy placeholder; use SBX_ENV_WAVE_* for custom envelopes */
  SBX_WAVE_SPIN_BASE = 2200    /* literal spinNN bipolar motion id: + [0..99], valid only for spin tones */
} SbxWaveform;
typedef enum {
  SBX_INTERP_LINEAR = 0,
  SBX_INTERP_STEP = 1
} SbxInterpMode;
typedef struct {
  double sample_rate; /* Hz, e.g. 44100 */
  int channels;       /* currently 2 (stereo) */
} SbxEngineConfig;
typedef struct {
  SbxToneMode mode;
  double carrier_hz;
  double beat_hz;
  double orbit_hz;  /* orbitbeat spatial orbit rate in Hz */
  double orbit_distance_m; /* orbitbeat source distance in meters */
  int orbit_envelope_mode; /* SBX_ORBIT_ENV_* for orbitbeat default envelope */
  double amplitude;  /* 0.0 .. 1.0 */
  int waveform;      /* SBX_WAVE_* carrier waveform, or SBX_WAVE_SPIN_BASE+[0..99] for spin tones */
  int envelope_waveform; /* SBX_ENV_WAVE_NONE or SBX_ENV_WAVE_* + [0..99] */
  int noise_waveform; /* SBX_NOISE_WAVE_NONE or SBX_NOISE_WAVE_BASE + [0..99], valid only for noise and spin-noise tones */
  double duty_cycle; /* for isochronic mode: 0.0 .. 1.0 (default 0.403014) */
  double iso_start;   /* cycle-relative start phase for isochronic mode (default 0.048493) */
  double iso_attack;  /* attack share of isochronic on-window (default 0.5) */
  double iso_release; /* release share of isochronic on-window (default 0.5) */
  int iso_edge_mode;  /* 0 hard, 1 linear, 2 smoothstep, 3 smootherstep */
} SbxToneSpec;
typedef struct {
  double time_sec; /* keyframe timestamp, >= 0, increasing */
  SbxToneSpec tone;
  int interp; /* interpolation mode to next keyframe: SBX_INTERP_* */
} SbxProgramKeyframe;
typedef struct SbxContext SbxContext;
/* Public API version integer (for feature gating). */
int sbx_api_version(void);
/* Convert status code (SBX_*) to short text. */
const char *sbx_status_string(int status);
/* ----- Defaults ----- */

/* Fill cfg with library defaults (44.1k stereo). */
void sbx_default_engine_config(SbxEngineConfig *cfg);
/* Fill tone with default binaural-safe values. */
void sbx_default_tone_spec(SbxToneSpec *tone);
/* Parse one tone token with explicit default waveform for unprefixed tones. */
int sbx_parse_tone_spec_ex(const char *spec, int default_waveform, SbxToneSpec *out_tone);
/* ----- Context lifecycle/load/render ----- */

/* Create context (higher-level runtime/load object). */
SbxContext *sbx_context_create(const SbxEngineConfig *cfg);
/* Destroy context created by sbx_context_create(). */
void sbx_context_destroy(SbxContext *ctx);
/* Load keyframed program (strictly increasing time_sec). */
int sbx_context_load_keyframes(SbxContext *ctx,
                               const SbxProgramKeyframe *frames,
                               size_t frame_count,
                               int loop);
/* Load minimal keyframe sequence file. */
int sbx_context_load_sequence_file(SbxContext *ctx, const char *path, int loop);
/* Load SBG timing subset file. */
int sbx_context_load_sbg_timing_file(SbxContext *ctx, const char *path, int loop);
/* ----- Runtime overlays: aux tones ----- */

/* Replace auxiliary overlay tone list (max SBX_MAX_AUX_TONES). */
int sbx_context_set_aux_tones(SbxContext *ctx, const SbxToneSpec *tones, size_t tone_count);
/* Program duration in seconds (0 for static tone sources). */
double sbx_context_duration_sec(const SbxContext *ctx);
/*
 * Sample evaluated tone values over [t0_sec, t1_sec].
 * - sample_count must be >= 1.
 * - out_tones must have sample_count elements.
 * - out_t_sec is optional (may be NULL).
 * - Times are interpreted in context time domain; looped keyframe programs
 *   are wrapped to keyframe duration when sampled.
 */
int sbx_context_sample_tones(SbxContext *ctx,
                             double t0_sec,
                             double t1_sec,
                             size_t sample_count,
                             double *out_t_sec,
                             SbxToneSpec *out_tones);
/* Render interleaved stereo float frames from context source. */
int sbx_context_render_f32(SbxContext *ctx, float *out, size_t frames);
/* Last context-local error text. */
const char *sbx_context_last_error(const SbxContext *ctx);